--- a/app/src/main/res/layout/activity_iniciado.xml
+++ b/app/src/main/res/layout/activity_iniciado.xml
@@ -40,6 +40,16 @@
         app:layout_constraintTop_toBottomOf="@+id/TituloHome"
         app:srcCompat="@drawable/campingmap" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view1"
+        android:layout_width="match_parent"
+        android:layout_height="308dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tituloeventos"
+        app:layout_constraintVertical_bias="1.0" />
+
     <TextView
         android:id="@+id/TituloHome"
         android:layout_width="180dp"
@@ -54,6 +64,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tituloeventos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Últimos Eventos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
