--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@android:color/darker_gray"
+        android:drawable="@android:color/white"
         android:state_selected="true" />
     <item
-        android:color="@android:color/black"
+        android:color="@android:color/white"
         android:state_selected="false" />
 
 </selector>
