--- a/app/src/main/res/layout/activity_send_eventos.xml
+++ b/app/src/main/res/layout/activity_send_eventos.xml
@@ -15,7 +15,10 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="24dp"
-        android:text="Elegir Imagen" />
+        android:backgroundTint="#7fadca"
+        android:drawableLeft="@drawable/ic_stat_ic_notification"
+        android:text="Elegir Imagen"
+        android:textColor="#FFFFFF" />
 
     <EditText
         android:id="@+id/edit_text_file_name"
@@ -23,8 +26,8 @@
         android:layout_height="48dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="171dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="194dp"
         android:gravity="start|top"
         android:hint="Titulo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,9 +40,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="164dp"
-        android:layout_marginBottom="15dp"
-        android:text="Subir" />
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="61dp"
+        android:backgroundTint="#7fadca"
+        android:drawableLeft="@drawable/ic_stat_ic_notification"
+        android:text="Publicar"
+        android:textColor="#FFFFFF" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -57,8 +63,8 @@
         android:layout_above="@+id/progress_bar"
 
         android:layout_below="@+id/edit_text_file_date"
-        android:layout_marginTop="42dp"
-        android:layout_marginBottom="-1dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginBottom="24dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <EditText
@@ -84,5 +90,18 @@
         android:ems="10"
         android:hint="dd/mm/aaaa"
         android:inputType="date" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="407dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-3dp"
+        app:itemBackground="@color/cardview_dark_background"
+        app:itemIconTint="@drawable/selector"
+        app:itemTextColor="@drawable/selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/menu_navigation" />
 
 </RelativeLayout>
