--- a/app/src/main/res/layout/activity_send_images.xml
+++ b/app/src/main/res/layout/activity_send_images.xml
@@ -8,13 +8,18 @@
 
     <Button
         android:id="@+id/button_choose_image1"
-        android:layout_width="wrap_content"
+        android:layout_width="178dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="24dp"
-        android:text="Elegir Imagen" />
+        android:layout_marginStart="-6dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="10dp"
+        android:layout_toEndOf="@+id/edit_text_file_name1"
+        android:backgroundTint="#7fadca"
+        android:drawableLeft="@drawable/galeria"
+        android:text="Elegir Imagen"
+        android:textColor="#FFFFFF" />
 
     <EditText
         android:id="@+id/edit_text_file_name1"
@@ -32,11 +37,18 @@
         android:id="@+id/button_upload1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_below="@+id/image_view1"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="164dp"
-        android:layout_marginBottom="15dp"
-        android:text="Subir" />
+        android:layout_marginStart="259dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="17dp"
+        android:backgroundTint="#7fadca"
+        android:drawableLeft="@android:drawable/stat_sys_upload"
+        android:text="Publicar"
+        android:textColor="#FFFFFF" />
 
     <ProgressBar
         android:id="@+id/progress_bar1"
@@ -49,12 +61,30 @@
 
     <ImageView
         android:id="@+id/image_view1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="318dp"
+        android:layout_height="513dp"
         android:layout_above="@+id/progress_bar"
-        android:layout_below="@+id/edit_text_file_name"
-        android:layout_marginTop="17dp"
+        android:layout_below="@+id/edit_text_file_name1"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="44dp"
         android:layout_marginBottom="-1dp"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-2dp"
+        app:itemBackground="@color/cardview_dark_background"
+        app:itemIconTint="@drawable/selector"
+        app:itemTextColor="@drawable/selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/menu_navigation" />
+
 
 </RelativeLayout>
