--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -8,12 +8,12 @@
     <item
 
         android:id="@+id/home"
-        android:icon="@drawable/mapa"
+        android:icon="@drawable/casa"
         android:title="Home" />
 
     <item
         android:id="@+id/multimedia"
-        android:icon="@drawable/galeria"
+        android:icon="@drawable/multi2"
         android:title="Multimedia" />
 
 
