--- a/app/src/main/res/layout/activity_iniciado.xml
+++ b/app/src/main/res/layout/activity_iniciado.xml
@@ -32,13 +32,18 @@
         app:menu="@menu/menu_navigation"
         />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.synnapps.carouselview.CarouselView
+        android:id="@+id/carousel"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TituloHome"
-        app:srcCompat="@drawable/campingmap" />
+        app:fillColor="#FFFFFFFF"
+        app:pageColor="#00000000"
+        app:radius="6dp"
+        app:slideInterval="3000"
+        app:strokeColor="#FF777777"
+        app:strokeWidth="1dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view1"
@@ -52,13 +57,16 @@
 
     <TextView
         android:id="@+id/TituloHome"
-        android:layout_width="180dp"
-        android:layout_height="30dp"
+        android:layout_width="117dp"
+        android:layout_height="38dp"
         android:layout_marginTop="28dp"
         android:accessibilityLiveRegion="polite"
         android:clickable="true"
         android:contentDescription="Bienvenido a la app de riorural en la cual podrás explorar miles de posiblidiades."
-        android:text="Bienvenido a tu camping"
+        android:text="RioRural"
+        android:textColor="#247037"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,9 +77,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Últimos Eventos"
+        android:textColor="#247037"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/carousel" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
